# sublime-python-coverage

./: .gitignore  REPOSITORY_OVERVIEW.md  pyproject.toml  python-coverage.py  python-coverage.sublime-settings
.github/workflows/: ci.yml
libs/: coverage-7.5.4-cp38-cp38-macosx_10_9_x86_64.whl  coverage-7.5.4-cp38-cp38-macosx_11_0_arm64.whl  coverage-7.5.4-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  coverage-7.5.4-cp38-cp38-manylinux_2_5_i686.manylinux1_i686.manylinux_2_17_i686.manylinux2014_i686.whl  coverage-7.5.4-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  coverage-7.5.4-cp38-cp38-win32.whl  coverage-7.5.4-cp38-cp38-win_amd64.whl  watchdog-4.0.2-cp38-cp38-macosx_10_9_x86_64.whl  watchdog-4.0.2-cp38-cp38-macosx_11_0_arm64.whl  watchdog-4.0.2-py3-none-manylinux2014_aarch64.whl  watchdog-4.0.2-py3-none-manylinux2014_i686.whl  watchdog-4.0.2-py3-none-win32.whl
tests/: __init__.py  conftest.py  test_basic.py  test_commands.py  test_coverage_file.py  test_coverage_manager.py  test_event_listeners.py
tests/mocks/: sublime.py  sublime_plugin.py
