[tool.poetry]
name = "python-coverage"
version = "0.1.0"
description = "Sublime plugin for showing python code coverage misses"
authors = ["Berend Klein Haneveld <berendkleinhaneveld@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# The poetry sections only serve as specification for the
# dev dependencies needed for development of the plugin

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
ruff = "*"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-mock = "^3.0"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I", "B", "N", "A", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "libs/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
