[project]
name = "python-coverage"
version = "0.1.0"
description = "Sublime plugin for showing python code coverage misses"
authors = [
    {name = "Berend Klein Haneveld", email = "berendkleinhaneveld@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "ruff",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    # Runtime dependencies needed for testing
    # (bundled as wheels in libs/ for Sublime Text runtime)
    "coverage>=7.2.0",
    "watchdog>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I", "B", "N", "A", "PTH"]
